--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <small>(logout)</small>
     </a>
   </nav>
+
   <section class="articles-container container">
+    <!--Submit a story form-->
     <form action="" class="hidden" id="submit-form">
       <div>
         <label for="author">author</label>
@@ -39,6 +41,7 @@
       <button type="submit">submit</button>
       <hr>
     </form>
+
     <article>
       <ol id="all-articles-list" class="articles-list">
         <h3>Loading...</h3>
@@ -57,6 +60,7 @@
       </ul>
     </article>
   </section>
+
   <section class="edit-article-container container">
     <form action="#" id="edit-article-form" class="hidden" method="post">
       <h4>Article Information</h4>
@@ -67,6 +71,7 @@
       </div>
     </form>
   </section>
+
   <section class="account-forms-container container">
     <form action="#" id="login-form" class="account-form hidden" method="post">
       <h4>Login</h4>
@@ -98,6 +103,7 @@
       <button type="submit">create account</button>
     </form>
   </section>
+
   <section id="user-profile" class="container hidden">
     <h4>User Profile Info</h4>
     <section>
