--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="shortcut icon" href="favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,8 +14,9 @@
 
 <body>
   <nav>
-    <b><a class="nav-link navbar-brand" href="#" id="nav-all">Hack or Snooze</a></b>
-    <a class="nav-link nav-left hidden" href="#" id="nav-submit">submit</a>
+    <b><a class="nav-link navbar-brand" href="#" id="nav-all">Hack or Snooze</a></b> &nbsp; |
+    <a class="nav-link nav-left hidden" href="#" id="nav-submit">submit</a> | 
+    <a class="nav-link nav-left hidden" href="#" id="nav-favorites">favorites</a>
     <a class="nav-link nav-right" href="#" id="nav-login">login/create user</a>
     <span class="nav-link nav-right hidden" id="nav-welcome">
       <a href="#" id="nav-user-profile"></a>
