--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <body>
   <nav>
-    <b><a class="nav-link navbar-brand" href="#" id="nav-all">Hack or Snooze</a></b> &nbsp; |
-    <a class="nav-link nav-left hidden" href="#" id="nav-submit">submit</a> | 
-    <a class="nav-link nav-left hidden" href="#" id="nav-favorites">favorites</a>
+    <b><a class="nav-link navbar-brand" href="#" id="nav-all">Hack or Snooze</a></b> &nbsp; 
+    <span>| <a class="nav-link nav-left hidden" href="#" id="nav-submit"> submit</a></span>
+    <span>| <a class="nav-link nav-left hidden" href="#" id="nav-favorites">favorites</a></span>
+    <span>| <a class="nav-link nav-left hidden" href="#" id="nav-own">my articles</a></span>
     <a class="nav-link nav-right" href="#" id="nav-login">login/create user</a>
     <span class="nav-link nav-right hidden" id="nav-welcome">
       <a href="#" id="nav-user-profile"></a>
